# parquet_viewer

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.node.tsbuildinfo  vite.config.ts
artifacts/: README.md  final.md  improvement-log.md
docs/: AI_WORK_POLICY.md  DEVELOPMENT_PLAN.md  PLAYWRIGHT.md  PROJECT_SPEC.md  UI_VALIDATION.md
e2e/: csv-profile.spec.ts  helpers.ts  oes-hdf5.spec.ts  phase11.spec.ts  phase12.spec.ts  phase13.spec.ts  phase14.spec.ts  ui-geometry.spec.ts  workspace-ui.spec.ts
scripts/: audit_phase10_fixtures.py  audit_phase12_fixtures.py  audit_phase12_h5_matrix.py  audit_phase14_fixtures.py  audit_phase15_dependencies.py  audit_phase7_security.py  benchmark_polars_csv_pipeline.py  cancel_native_dialog.py  capture_phase10_ui.mjs  capture_window.py  generate_fixtures.py  generate_phase10_fixtures.py  generate_phase11_h5_fixtures.py  generate_phase12_fixtures.py  generate_phase12_h5_matrix.py  generate_phase13_fixtures.py  generate_phase14_fixtures.py  generate_phase7_fixtures.py  generate_phase8_fixtures.py  generate_phase9_fixtures.py  generate_phase9_large_fixtures.py  native_boundary_perf.mjs  native_cdp_smoke.mjs  native_oes_smoke.mjs  native_phase12_smoke.mjs  native_phase13_smoke.mjs  native_phase14_smoke.mjs  phase8_fixture_audit.py  phase8_native_process_harness.py  run_phase12_bench.py  run_phase14_bench.py  run_phase15_polars_poc.py  run_phase15_product_benchmark.py  run_phase7_bench.py  (+2 more)
src-tauri/: .gitignore  Cargo.toml  THIRD_PARTY_NOTICES.md  tauri.conf.json  tauri.playwright.conf.json
src-tauri/examples/: phase15_polars_poc.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/copy/: mod.rs
src-tauri/src/data/: boundary.rs  cell_state_bitmap.rs  csv_polars.rs  csv_prepare.rs  csv_profile.rs  csv_source.rs  duration.rs  format_contract_tests.rs  mod.rs  oes_hdf5_source.rs  parquet_source.rs  phase2_tests.rs  phase3_tests.rs  registry.rs  source.rs  value_format.rs
src-tauri/src/domain/: boundary.rs  copy.rs  csv_profile.rs  error.rs  mod.rs  models.rs  query.rs  settings.rs
src-tauri/src/platform/: dialog.rs  hdf5_runtime.rs  mod.rs  session.rs  startup.rs
src-tauri/src/query/: engine.rs  mod.rs  phase13_large_tests.rs  sql.rs
src-tauri/src/storage/: csv_cache.rs  mod.rs  settings.rs  temp.rs
(+385 files in other folders)
