[package]
name = "data-viewer"
version = "0.1.0"
description = "A read-only desktop viewer for CSV and Parquet files"
authors = ["Data Viewer contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "data_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
arrow-array = "59.0.0"
arrow-schema = "59.0.0"
base64 = "0.22"
csv = "1.3"
parquet = "59.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
