[package]
name = "data-viewer"
version = "0.1.0"
description = "A read-only desktop viewer for CSV and Parquet files"
authors = ["Data Viewer contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "data_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
base64 = "0.22"
chrono = "0.4"
chrono-tz = "0.10"
csv = "1.3"
duckdb = { version = "~1.10504.0", features = ["bundled", "parquet", "vscalar"] }
fs2 = "0.4"
hdf5 = { version = "=0.13.0", package = "hdf5-metno", features = ["static", "blosc-zstd"] }
ndarray = "0.17"
parquet = "58.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
